fix(jca): route DSA KeyFactory/AlgorithmParameters and real-SPI CertificateFactory
Continues the SecurityInfoTests/NestedJarFileTests jar-signature investigation.
What an earlier round mislabeled "bug 4: X.509 DER-parsing failure" was actually
three separate DSA-specific JCA-provider gaps, found by fixing forward one
exception at a time:

- KeyFactory.getInstance("DSA") had no native support at all (algo_idx
  unmapped); added ALGO_DSA + drive_real_dsa_keyfactory, routing to the real
  sun.security.provider.DSAKeyFactory SPI.
- AlgorithmParameters.getInstance("DSA") had no registered provider service,
  leaving DSAPublicKey.getParams() null; added seed_sun_dsa_services (SUN
  provider, AlgorithmParameters.DSA -> sun.security.provider.DSAParameters).
- CertificateFactory.getInstance(String) (the 1-arg overload nearly everyone
  uses) was intercepted by an old synthetic-stub native that never set the
  real certFacSpi field, NPEing generateCertPath/generateCRL(s) for every
  caller, not just DSA; added try_build_real_certificate_factory, which
  builds a genuine CertificateFactory via its real constructor when the
  real-JCA/EC/DSA routing path is active.

With all three fixed, jar verification now runs to completion with no
exceptions for the first time in this investigation. A new, distinct, and
confirmed-genuine bug remains open: nested PKCS7 (RFC 3161 timestamp token)
attribute parsing silently fails inside SignerInfo.getTimestamp(), causing
JarVerifier to silently treat every entry as unsigned (caught by its own
catch-and-ignore). Verified via a JDK-independent reflective repro that the
identical bytes verify cleanly under real HotSpot JDK 25 but not CratonVM.
Documented as bug 7 for a follow-up session.

cargo test -p cratonvm-native-builtins --lib: 2976 passed, 6 failed, all
matching the pre-existing baseline (verified the KeyFactory Ed25519 failure
specifically is unaffected by this diff via git stash).

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>